--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav class="links-cabecalho">
+            <a href="">Inicio</a>
+            <a href="">Sobre mim</a>
+            <a href="">Skills</a>
+            <a href="">Projetos</a>
+            <a href="">Trabalho</a>
+            <a href="">Fale comigo</a>
+        </nav>
+    </header>
 </body>
 </html>
