--- a/index.html
+++ b/index.html
@@ -5,18 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./src/css/style.css">
+    <title>Meu Portfolio</title>
 </head>
 <body>
     <header>
         <nav class="links-cabecalho">
+            <h1 class="nome-cabecalho">A</h1>
             <a href="">Inicio</a>
             <a href="">Sobre mim</a>
-            <a href="">Skills</a>
+            <a href="">Certificados</a>
             <a href="">Projetos</a>
             <a href="">Trabalho</a>
             <a href="">Fale comigo</a>
         </nav>
     </header>
+
+    <script src=""></script>
 </body>
 </html>
