chamei meu arquivo script dentro do html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Meu Portfolio</title>
 </head>
 <body>
+    
     <header>
         <nav class="links-cabecalho">
             <h1 class="nome-cabecalho">A</h1>
@@ -20,7 +21,8 @@
             <a href="">Fale comigo</a>
         </nav>
     </header>
+    
 
-    <script src=""></script>
+    <script src="src/js/script.js"></script>
 </body>
 </html>
