Criando sessao inicio

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             <a href="">Fale comigo</a>
         </nav>
     </header>
+    <main>
+        <section class="section-inicio">
+            
+        </section>
+    </main>
     
 
     <script src="src/js/script.js"></script>
