--- a/index.html
+++ b/index.html
@@ -1,35 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-    <link rel="stylesheet" href="./src/css/style.css">
-    <title>Meu Portfolio</title>
-</head>
-<body>
-    
-    <header>
-        <h1 class="nome-cabecalho">A</h1>
-        <nav class="links-cabecalho">
-            <a href="">Inicio</a>
-            <a href="">Sobre mim</a>
-            <a href="">Certificados</a>
-            <a href="">Projetos</a>
-            <a href="">Trabalho</a>
-            <a href="">Fale comigo</a>
-        </nav>
-    </header>
-    <main>
-        <section class="section-inicio">
-            <p>Bem Vindo ao meu WebSite!</p>
-            <h1>Me chamo Andrei,</h1>
-            <p>busco conhecimento como desenvolvedor e essas são minhas redes sociais caso você queira entra em contato comigo</p>
-        </section>
-    </main>
-    
-
-    <script src="src/js/script.js"></script>
-</body>
+<!doctype html>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
